--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/generative-ai": "^0.16.0",
+    "axios": "^1.7.3",
     "express": "^4.19.2",
+    "jsonrepair": "^3.8.0",
+    "JSONStream": "^1.3.5",
     "moment": "^2.30.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "safe-json-stringify": "^1.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
